[tool.poetry]
name = "llm-rl-agent"
version = "0.1.0"
description = ""
authors = ["Keval Shah <keval.arhan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gymnasium = {extras = ["box2d"], version = "^1.0.0"}
openai = "^1.57.2"
numpy = "^2.2.0"
matplotlib = "^3.10.0"
google-genai = "^1.0.0"
swig = "^4.3.0"
gym = "^0.26.2"
stable-baselines3 = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
