[project]
name = "llm-rl-agent"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[classic-control,mujoco]>=0.29.1,<1.1.0",
    "openai>=1.57.2",
    "numpy>=2.2.0",
    "matplotlib>=3.10.0",
    "google-genai>=1.0.0",
    "swig>=4.3.0",
    "gym>=0.26.2",
    "stable-baselines3>=2.5.0",
    "scikit-image>=0.25.2",
    "python-dotenv>=1.2.1",
]
authors = [
    {name = "Keval Shah", email = "keval.arhan@gmail.com"}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents"]
